--- a/LHL Midterm/LHL Midterm/Base.lproj/Main.storyboard
+++ b/LHL Midterm/LHL Midterm/Base.lproj/Main.storyboard
@@ -33,18 +33,26 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="196.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" semanticContentAttribute="playback" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="svl-xb-tlG">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" semanticContentAttribute="playback" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="svl-xb-tlG">
                                                     <rect key="frame" x="67" y="61" width="240" height="128"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y6Y-17-ovd">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y6Y-17-ovd">
                                                     <rect key="frame" x="67" y="31" width="240" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <color key="backgroundColor" red="0.73619230940000002" green="0.96288050520000001" blue="0.6045411732" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="svl-xb-tlG" firstAttribute="leading" secondItem="heI-3B-rWc" secondAttribute="leading" constant="67" id="FNw-8w-71a"/>
+                                                <constraint firstItem="svl-xb-tlG" firstAttribute="top" secondItem="Y6Y-17-ovd" secondAttribute="bottom" constant="9" id="LqA-wm-hlo"/>
+                                                <constraint firstItem="Y6Y-17-ovd" firstAttribute="top" secondItem="heI-3B-rWc" secondAttribute="topMargin" constant="23" id="Ovu-o2-dIh"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Y6Y-17-ovd" secondAttribute="trailing" constant="60" id="bjH-iR-UZ1"/>
+                                                <constraint firstItem="Y6Y-17-ovd" firstAttribute="leading" secondItem="heI-3B-rWc" secondAttribute="leadingMargin" constant="59" id="oGW-i9-L69"/>
+                                                <constraint firstAttribute="trailing" secondItem="svl-xb-tlG" secondAttribute="trailing" constant="68" id="rHQ-6W-Ycf"/>
+                                                <constraint firstAttribute="bottom" secondItem="svl-xb-tlG" secondAttribute="bottom" constant="7.5" id="yIY-Tx-PDg"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="imageDisplay" destination="svl-xb-tlG" id="jzW-Uo-bYe"/>
@@ -194,23 +202,44 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mEB-wl-xkL">
-                                <rect key="frame" x="199" y="107" width="160" height="18"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Price" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UEs-jV-a93">
-                                <rect key="frame" x="199" y="196" width="160" height="21"/>
+                                <rect key="frame" x="196" y="107" width="160" height="18"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Origin" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KsX-JE-aku">
-                                <rect key="frame" x="199" y="153" width="155" height="18"/>
+                                <rect key="frame" x="196" y="133" width="155" height="18"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Package Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Xf-yV-Ad4">
+                                <rect key="frame" x="196" y="159" width="160" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Primary Category" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mi5-ZK-eBu">
+                                <rect key="frame" x="196" y="188" width="160" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Secondary Category" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="akE-aq-cva">
+                                <rect key="frame" x="196" y="217" width="160" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Price" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UEs-jV-a93">
+                                <rect key="frame" x="196" y="287" width="108" height="40"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -223,7 +252,10 @@
                         <outlet property="alcoholPriceLabel" destination="UEs-jV-a93" id="3xg-Kw-AdE"/>
                         <outlet property="imageView" destination="3aA-NB-XkI" id="gtJ-Ye-ngZ"/>
                         <outlet property="mapView" destination="xse-O2-uG3" id="chP-e4-PAl"/>
+                        <outlet property="packageDescripLabel" destination="6Xf-yV-Ad4" id="yes-6z-Pus"/>
+                        <outlet property="primaryCategLabel" destination="mi5-ZK-eBu" id="2Rd-Du-I4j"/>
                         <outlet property="searchDisplayController" destination="Jh8-cl-ack" id="8UT-cJ-r72"/>
+                        <outlet property="secondCategLabel" destination="akE-aq-cva" id="b9l-ed-U1c"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RtP-65-snm" userLabel="First Responder" sceneMemberID="firstResponder"/>
